assets/styles/style.css
/* Base Styles */
html {
    background-color: #0d131d;
    color: #dadada;
    font-family: "Roboto", sans-serif;
}

body {
    padding: 0;
    margin: 0;

}

button {
    padding: 6px 8px;
    width: 120px;
    border-radius: 8px;
    background-color: #232d3f;
    border: 1px solid #dadada;
    color: #dadada;
}

button:hover {
    background-color: #0d131d;
}

h2,
h1 {
    margin: 0;
    font-family: "Noto Sans";
    font-weight: 300;
}

h1 {

    font-size: 2.3em;
}

h2 {
    font-size: 1.25em;
}

a {
    text-decoration: none;
    color: inherit;
}

p {
    line-height: 1.5em;
    letter-spacing: 0.3px;
}

/* Header & Navigation */
header {
    padding: 1vh 6vw;
}

header nav .logo {
    margin-right: auto;
}

header nav .logo img {
    max-width: 200px;
}

header nav ul {
    display: flex;
    flex-wrap: wrap;
    flex-basis: 180px;
    justify-content: space-evenly;
    list-style-type: none;
    padding: 0;
}

header nav li {
    align-self: center;
    margin: 0.7em;
    transition: color 300ms;
}

header nav li i {
    font-size: 2.5em;
}

header nav li a {
    text-decoration: none;
    color: inherit;
}

header nav li:hover {
    color: rgb(194, 194, 194);
}


@media (max-width: 576px) {
    header nav ul {
        justify-content: center;
    }

    header nav .logo {
        width: 100vw;
        margin-right: 0;
        text-align: center;

    }

    header nav li {
        margin: 1.5em 1em;
    }
}

/* Main Content */
.content {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
}

.content-container {
    display: flex;
    flex-direction: column;
    margin: 25px 3vw;
    width: 90vw;
}

.content:nth-of-type(2n) {
    background-color: #232d3f;
    clip-path: polygon(0% 50px, 100% 0%, 100% calc(100% - 50px), 0% 100%);
    padding: 12vh 0;

}

.banner {
    padding: 3% 0;
    text-align: center;
}

.banner h1 {
    font-family: serif;
    font-size: 70px;
}

.btn-toggle {
    display: none;
}

@media (max-width: 576px) {
    .banner h1 {
        font-family: serif;
        font-size: 60px;
    }

    .collapse {
        display: grid;
        grid-template-rows: 0fr;
        padding: 0;
        margin: 0;
        transition: grid-template-rows 250ms ease-in-out;
    }

    .collapse p {
        overflow: hidden;
        margin-top: 0;
        margin-bottom: 0;
    }

    .collapse.show p {
        overflow: hidden;
        margin-bottom: 10px;
    }

    .collapse.show {
        grid-template-rows: 1fr;
    }

    .btn-toggle {
        display: block;
    }
}


@media (max-width: 992px) {
    .content {
        flex-direction: column;
    }

    .content>h1 {
        text-align: center;
    }
}

/* Footer */
footer {
    padding: 1vh 6vw;
}

footer nav ul {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    list-style-type: none;
    padding: 0;
}

footer nav li {
    align-self: center;
    margin: 0.7em;
    transition: color 300ms;
}

footer nav li i {
    font-size: 2.5em;
}

footer nav li a {
    text-decoration: none;
    color: inherit;
}

footer nav li:hover {
    color: rgb(194, 194, 194);
}

/* Helper Styles and Miscellaneous */
hr {
    width: 100%;
}

.tab {
    text-indent: 30px;
}

.copyright {
    margin-right: auto;
}

